src/Bindings/Ctp/TD.chs


{#fun tdCreate as create {`String'} -> `TDObject'#}
{#fun tdRelease as release {`TDObject'} -> `()'#}
{#fun tdGetApiVersion as getApiVersion {} -> `String'#}
{#fun tdInitialize as initialize {`TDObject'} -> `()'#}
{#fun tdGetTradingDay as getTradingDay {`TDObject'} -> `String'#}
{#fun tdRegisterFront as registerFront {`TDObject', `String'} -> `()'#}
{#fun tdRegisterNameServer as registerNameServer {`TDObject', `String'} -> `()'#}
{#fun tdRegisterFensUserInfo as registerFensUserInfo {`TDObject', with* `CThostFtdcFensUserInfoField'} -> `()'#}
{#fun tdRegisterSpi as registerSpi {`TDObject', withCtpTDSpiFFI* `CtpTDSpi'} -> `()'#}
{#fun tdSubscribePrivateTopic as subscribePrivateTopic {`TDObject', `ThostTeResumeType'} -> `()'#}
{#fun tdSubscribePublicTopic as subscribePublicTopic {`TDObject', `ThostTeResumeType'} -> `()'#}
{#fun tdReqAuthenticate as reqAuthenticate {`TDObject', with* `CThostFtdcReqAuthenticateField', `Int'} -> `Int'#}
{#fun tdReqUserLogin as reqUserLogin {`TDObject', with* `CThostFtdcReqUserLoginField', `Int'} -> `Int'#}
{#fun tdReqUserLogout as reqUserLogout {`TDObject', with* `CThostFtdcUserLogoutField', `Int'} -> `Int'#}
{#fun tdReqUserPasswordUpdate as reqUserPasswordUpdate {`TDObject', with* `CThostFtdcUserPasswordUpdateField', `Int'} -> `Int'#}
{#fun tdReqTradingAccountPasswordUpdate as reqTradingAccountPasswordUpdate {`TDObject', with* `CThostFtdcTradingAccountPasswordUpdateField', `Int'} -> `Int'#}
{#fun tdReqOrderInsert as reqOrderInsert {`TDObject', with* `CThostFtdcInputOrderField', `Int'} -> `Int'#}
{#fun tdReqParkedOrderInsert as reqParkedOrderInsert {`TDObject', with* `CThostFtdcParkedOrderField', `Int'} -> `Int'#}
{#fun tdReqParkedOrderAction as reqParkedOrderAction {`TDObject', with* `CThostFtdcParkedOrderActionField', `Int'} -> `Int'#}
{#fun tdReqOrderAction as reqOrderAction {`TDObject', with* `CThostFtdcInputOrderActionField', `Int'} -> `Int'#}
{#fun tdReqQueryMaxOrderVolume as reqQueryMaxOrderVolume {`TDObject', with* `CThostFtdcQueryMaxOrderVolumeField', `Int'} -> `Int'#}
{#fun tdReqSettlementInfoConfirm as reqSettlementInfoConfirm {`TDObject', with* `CThostFtdcSettlementInfoConfirmField', `Int'} -> `Int'#}
{#fun tdReqRemoveParkedOrder as reqRemoveParkedOrder {`TDObject', with* `CThostFtdcRemoveParkedOrderField', `Int'} -> `Int'#}
{#fun tdReqRemoveParkedOrderAction as reqRemoveParkedOrderAction {`TDObject', with* `CThostFtdcRemoveParkedOrderActionField', `Int'} -> `Int'#}
{#fun tdReqExecOrderInsert as reqExecOrderInsert {`TDObject', with* `CThostFtdcInputExecOrderField', `Int'} -> `Int'#}
{#fun tdReqExecOrderAction as reqExecOrderAction {`TDObject', with* `CThostFtdcInputExecOrderActionField', `Int'} -> `Int'#}
{#fun tdReqForQuoteInsert as reqForQuoteInsert {`TDObject', with* `CThostFtdcInputForQuoteField', `Int'} -> `Int'#}
{#fun tdReqQuoteInsert as reqQuoteInsert {`TDObject', with* `CThostFtdcInputQuoteField', `Int'} -> `Int'#}
{#fun tdReqQuoteAction as reqQuoteAction {`TDObject', with* `CThostFtdcInputQuoteActionField', `Int'} -> `Int'#}
{#fun tdReqLockInsert as reqLockInsert {`TDObject', with* `CThostFtdcInputLockField', `Int'} -> `Int'#}
{#fun tdReqBatchOrderAction as reqBatchOrderAction {`TDObject', with* `CThostFtdcInputBatchOrderActionField', `Int'} -> `Int'#}
{#fun tdReqCombActionInsert as reqCombActionInsert {`TDObject', with* `CThostFtdcInputCombActionField', `Int'} -> `Int'#}
{#fun tdReqQryOrder as reqQryOrder {`TDObject', with* `CThostFtdcQryOrderField', `Int'} -> `Int'#}
{#fun tdReqQryTrade as reqQryTrade {`TDObject', with* `CThostFtdcQryTradeField', `Int'} -> `Int'#}
{#fun tdReqQryInvestorPosition as reqQryInvestorPosition {`TDObject', with* `CThostFtdcQryInvestorPositionField', `Int'} -> `Int'#}
{#fun tdReqQryTradingAccount as reqQryTradingAccount {`TDObject', with* `CThostFtdcQryTradingAccountField', `Int'} -> `Int'#}
{#fun tdReqQryInvestor as reqQryInvestor {`TDObject', with* `CThostFtdcQryInvestorField', `Int'} -> `Int'#}
{#fun tdReqQryTradingCode as reqQryTradingCode {`TDObject', with* `CThostFtdcQryTradingCodeField', `Int'} -> `Int'#}
{#fun tdReqQryInstrumentMarginRate as reqQryInstrumentMarginRate {`TDObject', with* `CThostFtdcQryInstrumentMarginRateField', `Int'} -> `Int'#}
{#fun tdReqQryInstrumentCommissionRate as reqQryInstrumentCommissionRate {`TDObject', with* `CThostFtdcQryInstrumentCommissionRateField', `Int'} -> `Int'#}
{#fun tdReqQryExchange as reqQryExchange {`TDObject', with* `CThostFtdcQryExchangeField', `Int'} -> `Int'#}
{#fun tdReqQryProduct as reqQryProduct {`TDObject', with* `CThostFtdcQryProductField', `Int'} -> `Int'#}
{#fun tdReqQryInstrument as reqQryInstrument {`TDObject', with* `CThostFtdcQryInstrumentField', `Int'} -> `Int'#}
{#fun tdReqQryDepthMarketData as reqQryDepthMarketData {`TDObject', with* `CThostFtdcQryDepthMarketDataField', `Int'} -> `Int'#}
{#fun tdReqQrySettlementInfo as reqQrySettlementInfo {`TDObject', with* `CThostFtdcQrySettlementInfoField', `Int'} -> `Int'#}
{#fun tdReqQryTransferBank as reqQryTransferBank {`TDObject', with* `CThostFtdcQryTransferBankField', `Int'} -> `Int'#}
{#fun tdReqQryInvestorPositionDetail as reqQryInvestorPositionDetail {`TDObject', with* `CThostFtdcQryInvestorPositionDetailField', `Int'} -> `Int'#}
{#fun tdReqQryNotice as reqQryNotice {`TDObject', with* `CThostFtdcQryNoticeField', `Int'} -> `Int'#}
{#fun tdReqQrySettlementInfoConfirm as reqQrySettlementInfoConfirm {`TDObject', with* `CThostFtdcQrySettlementInfoConfirmField', `Int'} -> `Int'#}
{#fun tdReqQryInvestorPositionCombineDetail as reqQryInvestorPositionCombineDetail {`TDObject', with* `CThostFtdcQryInvestorPositionCombineDetailField', `Int'} -> `Int'#}
{#fun tdReqQryCFMMCTradingAccountKey as reqQryCFMMCTradingAccountKey {`TDObject', with* `CThostFtdcQryCFMMCTradingAccountKeyField', `Int'} -> `Int'#}
{#fun tdReqQryEWarrantOffset as reqQryEWarrantOffset {`TDObject', with* `CThostFtdcQryEWarrantOffsetField', `Int'} -> `Int'#}
{#fun tdReqQryInvestorProductGroupMargin as reqQryInvestorProductGroupMargin {`TDObject', with* `CThostFtdcQryInvestorProductGroupMarginField', `Int'} -> `Int'#}
{#fun tdReqQryExchangeMarginRate as reqQryExchangeMarginRate {`TDObject', with* `CThostFtdcQryExchangeMarginRateField', `Int'} -> `Int'#}
{#fun tdReqQryExchangeMarginRateAdjust as reqQryExchangeMarginRateAdjust {`TDObject', with* `CThostFtdcQryExchangeMarginRateAdjustField', `Int'} -> `Int'#}
{#fun tdReqQryExchangeRate as reqQryExchangeRate {`TDObject', with* `CThostFtdcQryExchangeRateField', `Int'} -> `Int'#}
{#fun tdReqQrySecAgentACIDMap as reqQrySecAgentACIDMap {`TDObject', with* `CThostFtdcQrySecAgentACIDMapField', `Int'} -> `Int'#}
{#fun tdReqQryProductExchRate as reqQryProductExchRate {`TDObject', with* `CThostFtdcQryProductExchRateField', `Int'} -> `Int'#}
{#fun tdReqQryProductGroup as reqQryProductGroup {`TDObject', with* `CThostFtdcQryProductGroupField', `Int'} -> `Int'#}
{#fun tdReqQryMMInstrumentCommissionRate as reqQryMMInstrumentCommissionRate {`TDObject', with* `CThostFtdcQryMMInstrumentCommissionRateField', `Int'} -> `Int'#}
{#fun tdReqQryMMOptionInstrCommRate as reqQryMMOptionInstrCommRate {`TDObject', with* `CThostFtdcQryMMOptionInstrCommRateField', `Int'} -> `Int'#}
{#fun tdReqQryInstrumentOrderCommRate as reqQryInstrumentOrderCommRate {`TDObject', with* `CThostFtdcQryInstrumentOrderCommRateField', `Int'} -> `Int'#}
{#fun tdReqQryOptionInstrTradeCost as reqQryOptionInstrTradeCost {`TDObject', with* `CThostFtdcQryOptionInstrTradeCostField', `Int'} -> `Int'#}
{#fun tdReqQryOptionInstrCommRate as reqQryOptionInstrCommRate {`TDObject', with* `CThostFtdcQryOptionInstrCommRateField', `Int'} -> `Int'#}
{#fun tdReqQryExecOrder as reqQryExecOrder {`TDObject', with* `CThostFtdcQryExecOrderField', `Int'} -> `Int'#}
{#fun tdReqQryForQuote as reqQryForQuote {`TDObject', with* `CThostFtdcQryForQuoteField', `Int'} -> `Int'#}
{#fun tdReqQryQuote as reqQryQuote {`TDObject', with* `CThostFtdcQryQuoteField', `Int'} -> `Int'#}
{#fun tdReqQryLock as reqQryLock {`TDObject', with* `CThostFtdcQryLockField', `Int'} -> `Int'#}
{#fun tdReqQryLockPosition as reqQryLockPosition {`TDObject', with* `CThostFtdcQryLockPositionField', `Int'} -> `Int'#}
{#fun tdReqQryETFOptionInstrCommRate as reqQryETFOptionInstrCommRate {`TDObject', with* `CThostFtdcQryETFOptionInstrCommRateField', `Int'} -> `Int'#}
{#fun tdReqQryInvestorLevel as reqQryInvestorLevel {`TDObject', with* `CThostFtdcQryInvestorLevelField', `Int'} -> `Int'#}
{#fun tdReqQryExecFreeze as reqQryExecFreeze {`TDObject', with* `CThostFtdcQryExecFreezeField', `Int'} -> `Int'#}
{#fun tdReqQryCombInstrumentGuard as reqQryCombInstrumentGuard {`TDObject', with* `CThostFtdcQryCombInstrumentGuardField', `Int'} -> `Int'#}
{#fun tdReqQryCombAction as reqQryCombAction {`TDObject', with* `CThostFtdcQryCombActionField', `Int'} -> `Int'#}
{#fun tdReqQryTransferSerial as reqQryTransferSerial {`TDObject', with* `CThostFtdcQryTransferSerialField', `Int'} -> `Int'#}
{#fun tdReqQryAccountregister as reqQryAccountregister {`TDObject', with* `CThostFtdcQryAccountregisterField', `Int'} -> `Int'#}
{#fun tdReqQryContractBank as reqQryContractBank {`TDObject', with* `CThostFtdcQryContractBankField', `Int'} -> `Int'#}
{#fun tdReqQryParkedOrder as reqQryParkedOrder {`TDObject', with* `CThostFtdcQryParkedOrderField', `Int'} -> `Int'#}
{#fun tdReqQryParkedOrderAction as reqQryParkedOrderAction {`TDObject', with* `CThostFtdcQryParkedOrderActionField', `Int'} -> `Int'#}
{#fun tdReqQryTradingNotice as reqQryTradingNotice {`TDObject', with* `CThostFtdcQryTradingNoticeField', `Int'} -> `Int'#}
{#fun tdReqQryBrokerTradingParams as reqQryBrokerTradingParams {`TDObject', with* `CThostFtdcQryBrokerTradingParamsField', `Int'} -> `Int'#}
{#fun tdReqQryBrokerTradingAlgos as reqQryBrokerTradingAlgos {`TDObject', with* `CThostFtdcQryBrokerTradingAlgosField', `Int'} -> `Int'#}
{#fun tdReqQueryCFMMCTradingAccountToken as reqQueryCFMMCTradingAccountToken {`TDObject', with* `CThostFtdcQueryCFMMCTradingAccountTokenField', `Int'} -> `Int'#}
{#fun tdReqFromBankToFutureByFuture as reqFromBankToFutureByFuture {`TDObject', with* `CThostFtdcReqTransferField', `Int'} -> `Int'#}
{#fun tdReqFromFutureToBankByFuture as reqFromFutureToBankByFuture {`TDObject', with* `CThostFtdcReqTransferField', `Int'} -> `Int'#}
{#fun tdReqQueryBankAccountMoneyByFuture as reqQueryBankAccountMoneyByFuture {`TDObject', with* `CThostFtdcReqQueryAccountField', `Int'} -> `Int'#}
